--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <body>
     <!-- Container principal para o jogo -->
     <div class="tabuleiro">
+      <p class="pontuacao">PONTUAÇÃO: 0 PULINHOS</p>
       <!-- Imagem de nuvens no fundo -->
       <img src="assets/imgs/nuvens.png" class="nuvem" />
       <!-- Imagem do personagem Mario -->
@@ -32,7 +33,10 @@
     <!-- Container para a tela de fim de jogo -->
     <div class="fim-de-jogo">
       <!-- Botão para reiniciar o jogo -->
+      <h2 class="msg">VOCÊ PERDEU !</h2>
       <button class="reiniciar">REINICIAR</button>
     </div>
+
+    <script src="script.js" defer></script>
   </body>
 </html>
